# decompound

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  cli-cross-platform.md  cli-stream-contract.md  complete-state-rebuild.md  component-count-validation.md  constrained-semantic-planning.md  contract-mode.md  deterministic-linguistic-fixtures.md  explanation-and-json-output.md  external-nlp-resources.md  final-acceptance.md  formal-recursive-model.md  head-and-target-selection.md  infinite-interaction-protocol.md  layered-validation.md  left-extension-invariant.md  legal-extension-selection.md  linearization-pipeline.md  linguistic-guarantees.md  morphology-and-orthography.md  property-based-contract-testing.md  resource-configuration-and-limitations.md  rich-planning-fallback.md  safe-recursive-skeleton.md  semantic-edge-validation.md  structured-lexeme-model.md  tty-redraw.md  typed-semantic-relations.md
scripts/: acceptance.py
tests/: test_adapters.py  test_architecture.py  test_cli.py  test_cli_cross_platform.py  test_cli_subprocess.py  test_component_count.py  test_contract.py  test_contract_properties.py  test_extension_selection.py  test_fallback.py  test_generator.py  test_interaction.py  test_layered_validation.py  test_left_extension.py  test_lexicon.py  test_linearization_pipeline.py  test_linguistic_cases.py  test_model.py  test_morphology.py  test_planning.py  test_platform.py  test_presentation.py  test_properties.py  test_rebuild.py  test_relations.py  test_safety.py  test_selection.py  test_semantic_edges.py  test_terminal.py
(+22 files in other folders)
